@@ -344,7 +344,8 @@ library. They are also documented in the pcrebuild man page.
   report is generated by running "make coverage". If ccache is installed on
   your system, it must be disabled when building PCRE for coverage reporting.
   You can do this by setting the environment variable CCACHE_DISABLE=1 before
-  running "make" to build PCRE.
+  running "make" to build PCRE. There is more information about coverage 
+  reporting in the "pcrebuild" documentation.
 
 . The pcregrep program currently supports only 8-bit data files, and so
   requires the 8-bit PCRE library. It is possible to compile pcregrep to use
@@ -971,4 +972,4 @@ pcre_xxx, one with the name pcre16_xx, and a third with the name pcre32_xxx.
 Philip Hazel
 Email local part: ph10
 Email domain: cam.ac.uk
-Last updated: 28 April 2013
+Last updated: 01 July 2013
